2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/21_mult_int_int_aff_float.deca
// Description :
//     Test sur convfloat avec la mult de deux int  
// Resultats :
//    Valide 
//
// Historique :
// cree le 12/01/2024

{
    float f = 1*2 ;
}